--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 static/2020/slides/mBlock_Kids.pdf
 static/2020/software/Balsamiq_Mockups_3.5.17.exe
 static/2020/software/camtasia.exe
+static/2020/software/codeblocks-17.12-setup.exe
+*.exe
