--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,7 @@ static/2020/software/codeblocks-17.12-setup.exe
 lang/.DS_Store
 static/.DS_Store
 static/2020/.DS_Store
+.DS_Store
+lang/.DS_Store
+static/.DS_Store
+static/2020/.DS_Store
